# record

./: .gitignore  README.md  codebuddy.md  debug-api-calls-not-visible.md  test_signature_system.dart  启用签名验证说明.md  调试功能说明.md
.dbg/: api-calls-not-visible.env  trae-debug-log-api-calls-not-visible.ndjson
record-api/: Cargo.toml  Makefile  record.db  restart.sh
record-api/src/: coord_transform.rs  db.rs  handlers.rs  main.rs  models.rs  record.db  signature.rs  signature.rs.bak
record-app/: pubspec.yaml
record-app/android/app/: build.gradle.kts
record-app/ios/: Podfile
record-app/ios/Runner/: Info.plist
record-app/ios/Runner.xcodeproj/: project.pbxproj
record-app/lib/: main.dart
record-app/lib/models/: diet_record.dart  exercise_plan.dart  run_result.dart  user_profile.dart
record-app/lib/screens/: diet_screen.dart  history_screen.dart  home_screen.dart  home_screen_backup.dart  login_screen.dart  main_shell.dart  profile_screen.dart  run_screen.dart  run_summary_screen.dart  tracking_screen.dart
record-app/lib/services/: api_service.dart  api_service.dart.bak  api_service_backup2.dart  api_service_temp.dart  location_service.dart  security_service.dart  storage_service.dart
record-app/lib/theme/: app_theme.dart
record-app/lib/utils/: coord_transform.dart  debug_helper.dart  signature_utils.dart
record-app/lib/widgets/: animated_widgets.dart  glass_card.dart
record-app/test/: widget_test.dart
record-app/web/: index.html
record-web/: index.html  package-lock.json  package.json  vite.config.ts
record-web/src/: App.tsx  index.css
(+3 files in other folders)
