[package]
name = "record-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }


[profile.dev]
opt-level=1
debug=true
debug-assertions=true
overflow-checks=true
panic="unwind"


[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = "debuginfo"
